[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "eznlp"
description = "Easy Natural Language Processing"
dynamic = ["version"]
requires-python = ">= 3.8"
readme = "README.md"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "torch",
    "transformers",
    "tokenizers",
    "sentencepiece",
    "nltk",
    "truecase",
    "hanziconv",
    "spacy",
    "jieba",
    "openpyxl",
]
authors = [
    {name = "Enwei Zhu", email = "enwei.zhu@outlook.com"},
]

[project.urls]
homepage = "https://github.com/syuoni/eznlp"

[project.optional-dependencies]
dev = [
    "pytorch-crf",
    "pytest",
    "pre-commit",
]

[tool.setuptools]
packages = {find = {include = ["eznlp*"]}}

[tool.setuptools.dynamic]
version = {attr = "eznlp.__version__"}

[tool.setuptools.package-data]
eznlp = ["utils/transition.xlsx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
target-version = ["py38"]
